# memex

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: lint.yml  memex.yml
docs/adr/: 0001-use-fastembed.md
knowledge/decisions/: 2026-04-02-1202-package-and-distribute-memex-as-a-standalone-pipinstallable.md  2026-04-02-1202-require-python-312-as-the-minimum-runtime.md  2026-04-02-1202-store-knowledge-records-as-files-committed-directly-into.md  2026-04-02-1202-trigger-knowledge-extraction-on-merged-pull-requests-only.md  2026-04-02-1202-use-claude-anthropic-as-the-llm-backbone-for.md  2026-04-02-1202-use-fastembed-for-local-embedding-generation.md  2026-04-02-1202-use-instructor-pydantic-for-structured-llm-output-parsing.md  2026-04-02-expose-memex-as-both-a-cli-tool-and.md  2026-04-02-package-and-distribute-memex-via-pypi-memexoss.md  2026-04-02-persist-extracted-knowledge-as-files-committed-directly-to.md  2026-04-02-trigger-knowledge-extraction-on-merged-pull-requests-via.md  2026-04-02-use-anthropic-claude-as-the-llm-backend-for.md  2026-04-02-use-instructor-pydantic-for-structured-llm-output.md  2026-04-02-use-numpy-as-a-core-dependency-implying-vectorembedding.md  2026-04-03-0706-adopt-agpl30-license-for-saas-protection.md  2026-04-03-0911-change-github-action-to-create-prs-instead-of.md  2026-04-04-1058-adr0001-use-of-fastembed.md  2026-04-04-1058-botopened-pr-for-human-review-of-each-extracted.md  2026-04-04-1058-claude-anthropic-as-the-llm-for-knowledge-extraction.md  2026-04-04-1058-github-actions-as-the-eventdriven-trigger-for-knowledge.md  2026-04-04-1058-instructor-library-used-for-structured-llm-output-schema.md  2026-04-04-1058-knowledge-records-stored-as-markdown-files-in-a.md  2026-04-04-1058-lowconfidence-nudge-pattern-instead-of-blocking-prs.md  2026-04-04-1058-pythononly-implementation-distributed-as-a-pipinstallable-package.md  2026-04-04-1058-use-fastembed-for-local-semantic-embeddings.md  2026-04-10-0828-switch-embed-text-from-raw-markdown-to-structured.md  2026-04-10-0935-implement-mcp-server-using-stdio-transport-and-fastmcp.md  2026-04-10-1042-expand-getreviewcomments-to-fetch-all-three-github-pr.md  2026-04-10-1042-use-structured-embed-text-title-context-decision-alternatives.md  2026-04-10-1043-rerun-extraction-with-author-reply-on-lowconfidence-nudge.md
memex/: __init__.py  action.py  adr.py  cli.py  config.py  extractor.py  init.py  mcp_server.py  nudge.py  schema.py  structural.py  update.py  writer.py
scripts/: check_docs.py  test_action.sh
tests/: test_action.py  test_cli.py  test_extractor.py  test_init.py  test_mcp_server.py  test_nudge.py  test_update.py
